# micro-cc

./: .env.example  .gitignore  HOW_FILE_TOOLS.md  README.md  claude_loop_.py  execute_tool.py  microcc-styles.tcss  pyproject.toml  requirements.txt  start_.py  start_live_.py  web_.py
browser/: _md_convert.py  browser_manager.py  simpletextbrowser.py
cache/: redis_cache.py
models/: anthropic.py  litellm.py  schema.py
screens/: window_overlay_.py
skills/: skill_loader.py
skills/github/: SKILL.md
skills/pptx/: SKILL.md
skills/xlsx/: SKILL.md
tests/: test_messages.py
tools/: bash_tool.py  browser_tool_.py  computer_tool_.py  file_tools_.py  mcp_client_.py  plan_tools_.py  search_tool_.py  skill_tools_.py  vision_tools_.py  web_tools_.py
utils/: annotate_.py  claude_md_loader.py  file_watcher_.py  helpers.py  msg_store_.py  process_tracker.py  token_counter_.py  token_usage.json  tokenization.py  tokenization_simple.py  utils.py
